--- a/Thanks.html
+++ b/Thanks.html
@@ -34,6 +34,47 @@
             font-display: swap;
         }
     </style>
+    <style>
+        /* Sync navbar and right-side tools with index.html (example.html parity)
+           Preserve local link texts — only visual/positioning styles applied */
+        .navbar-container {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            width: 100%;
+            background-color: var(--card-bg);
+            backdrop-filter: blur(12px);
+            border-bottom: 1px solid rgba(0,0,0,0.08);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            transition: background-color 0.3s ease, padding 0.3s ease, box-shadow 0.3s ease;
+        }
+        .navbar-container.shrink { padding: 0.25rem 0; box-shadow: 0 6px 16px rgba(0,0,0,0.06); }
+        .navbar-content { display:flex; justify-content:space-between; align-items:center; padding:0.75rem 1.5rem; max-width:1200px; margin:0 auto; }
+        .desktop .navbar-list { display:flex; list-style:none; gap:1.5rem; }
+        .navbar-item a { display:inline-flex; align-items:center; gap:0.5rem; color:var(--text-medium); text-decoration:none; padding:0.5rem 0; transition:color 0.2s ease; }
+        .navbar-item a::after { content:''; position:absolute; bottom:0; left:0; width:0; height:2px; background-color:var(--primary-blue); transition:width 0.3s ease; }
+        .navbar-item a.active, .navbar-item a:hover { color:var(--primary-blue); }
+        .navbar-item a.active::after, .navbar-item a:hover::after { width:100%; }
+        .mobile { display:none; align-items:center; gap:1rem; }
+        .icon-item { color:var(--text-medium); font-size:1.25rem; cursor:pointer; padding:0.5rem; border-radius:50%; }
+        .icon-item:hover { color:var(--primary-blue); background-color: rgba(0,0,0,0.03); }
+        .navbar-drawer { position:fixed; top:0; left:-100%; width:100%; max-width:320px; height:100vh; background-color:var(--card-bg); z-index:1001; transition:left 0.3s cubic-bezier(0.4,0,0.2,1); padding:2rem 1.5rem; overflow-y:auto; box-shadow:0 6px 16px rgba(0,0,0,0.06); }
+        .navbar-drawer.open { left:0; }
+        .drawer-navbar-list { list-style:none; display:flex; flex-direction:column; gap:0.5rem; }
+        .drawer-navbar-item a { display:flex; align-items:center; justify-content:space-between; color:var(--text-medium); text-decoration:none; padding:1rem; border-radius:8px; border:1px solid transparent; }
+        .drawer-navbar-item a:hover, .drawer-navbar-item a.active { color:var(--primary-blue); background-color: rgba(0,0,0,0.03); border-color: rgba(0,0,0,0.06); }
+        .window-mask { position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba(0,0,0,0.3); z-index:1000; opacity:0; pointer-events:none; transition:opacity 0.3s ease; }
+        .window-mask.show { opacity:1; pointer-events:all; }
+
+        /* place tools above widget-stack and avoid overlap with bottom widgets */
+        .right-side-tools-container { position: fixed; right: 18px; bottom: 120px; z-index: 11002; }
+        .side-tools-container { display:flex; flex-direction:column; gap:0.75rem; }
+        .right-bottom-tools { width:3rem; height:3rem; border-radius:50%; background-color: rgba(255,255,255,0.9); backdrop-filter: blur(8px); border:1px solid rgba(0,0,0,0.08); display:inline-flex; align-items:center; justify-content:center; cursor:pointer; box-shadow:0 6px 16px rgba(0,0,0,0.06); transition:transform 0.2s ease; }
+        .right-bottom-tools:hover { transform:scale(1.06); color:#fff; background-color:var(--primary-blue); }
+        .hidden-tools-list { display:flex; flex-direction:column; gap:0.75rem; opacity:0; transform:translateY(10px); pointer-events:none; transition:opacity 0.3s ease, transform 0.3s ease; }
+        .hidden-tools-list.show { opacity:1; transform:translateY(0); pointer-events:all; }
+        @media(max-width:768px){ .desktop{display:none;} .mobile{display:flex;} .right-side-tools-container{right:18px;bottom:96px;} }
+    </style>
     <script>
         // 在 CSS 之前设置主题，避免初始闪烁
         (function(){
